--- a/Latex/graph_mse_k.tex
+++ b/Latex/graph_mse_k.tex
@@ -2,7 +2,6 @@
 \begin{tikzpicture}
 
 \definecolor{color0}{rgb}{0.75,0.75,0}
-\definecolor{color1}{rgb}{0,0.75,0.75}
 
 \begin{axis}[
 legend cell align={left},
@@ -47,7 +46,7 @@ table {%
 10 1.96609660966097
 };
 \addlegendentry{MSE_itemrank}
-\addplot [semithick, color1]
+\addplot [semithick, red]
 table {%
 1 0.906497512905967
 2 0.932196238855579
